fix media queries for alt sizes

--- a/service.html
+++ b/service.html
@@ -19,8 +19,8 @@
     <nav aria-label="Site menu" class="navbar navbar-expand-md navbar-light bg-light fixed-top navClass">
         <div class="container navClass">
             <a href="./index.html" class="mr-auto navBarLogo">Milanowski & Associates, Inc.</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="my-2 my-lg-0">
@@ -118,6 +118,9 @@
             <div>© 2020 Milanowski & Associates, Inc. All Rights Reserved.</div>
         </nav>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./contact/contact.js"></script>
+    <script src="https://kit.fontawesome.com/6b33305948.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
         crossorigin="anonymous"></script>
