--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./resources/reset.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./resources/images/sat-blue.png">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600|Nunito+Sans:200,300,400,600,900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css?family=Poppins:200,400,600|Nunito+Sans:200,300,400,600,900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -18,12 +19,12 @@
     <nav aria-label="Site menu" class="navbar navbar-expand-md navbar-light bg-light fixed-top navClass">
         <div class="container navClass">
             <a href="./index.html" class="mr-auto navBarLogo">Milanowski & Associates, Inc.</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="my-2 my-lg-0">
-                <div class="collapse navbar-collapse " id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a href="./index.html" id="navHome" class="nav-link active" data-toggle="collapse"
@@ -78,6 +79,9 @@
         </nav>
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./contact/contact.js"></script>
+    <script src="https://kit.fontawesome.com/6b33305948.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
         integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
         crossorigin="anonymous"></script>
