contact email works

--- a/contact.html
+++ b/contact.html
@@ -85,19 +85,19 @@
                         <h1 class="contactUs">Contact Us</h1>
                         <form>
                             <p>
-                                <input class="textFields" placeholder="Name"></input>
+                                <input id="nameInput" class="textFields" placeholder="Name"></input>
                             </p>
                             <p>
-                                <input class="textFields" placeholder="Phone" />
+                                <input id="phoneInput" class="textFields" placeholder="Phone" />
                             </p>
                             <p>
-                                <input class="textFields" placeholder="Email Address" />
+                                <input id="emailInput" class="textFields" placeholder="Email Address" />
                             </p>
                             <div class="input-group full">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">Message</span>
                                 </div>
-                                <textarea class="form-control" rows="7" aria-label="With textarea"></textarea>
+                                <textarea id="messageInput" class="form-control" rows="7" aria-label="With textarea"></textarea>
                             </div>
                             <button id="emailSubmit" class="btn btn-dark emailSubmitBtn hvr-shadow hvr-sweep-to-right"
                                 type="button">Send
