setting site to under construction

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav aria-label="Site menu" class="navbar navbar-expand-md navbar-light bg-light fixed-top navClass">
+    <!-- <nav aria-label="Site menu" class="navbar navbar-expand-md navbar-light bg-light fixed-top navClass">
         <div class="container navClass">
             <a href="./index.html" class="mr-auto navBarLogo">Milanowski & Associates, Inc.</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -78,7 +78,8 @@
             <div>© 2020 Milanowski & Associates, Inc. All Rights Reserved.</div>
         </nav>
 
-    </div>
+    </div> -->
+    <div>currently under construction</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="./contact/contact.js"></script>
     <script src="https://kit.fontawesome.com/6b33305948.js"></script>
